kubernetes/estrategia-deploy/Canary/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-v1-versao
spec:
  replicas: 0
  selector:
    matchLabels:
      app: api-versao
      version: v1
  template:
    metadata:
      annotations:
        prometeus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        app: api-versao
        version: v1
    spec:
      containers:
      - name: api-versao
        image: kubedevio/api-versao:v1
        resources: {}
        ports:
        - containerPort: 8080
