kubernetes/estrategia-deploy/Canary/deploymentv2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-v2-versao
spec:
  replicas: 10
  selector:
    matchLabels:
      app: api-versao
      version: v2
  template:
    metadata:
      annotations:
        prometeus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        app: api-versao
        version: v2
    spec:
      containers:
      - name: api-versao
        image: kubedevio/api-versao:v2
        resources: {}
        ports:
        - containerPort: 8080
