kubernetes/estrategia-deploy/Canary/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-deploy-ingress
spec:
  rules:
  - host: api-pedelogo.datafisio.com.br
    http:
      paths:
      - backend:
            serviceName: api-versao-service
            servicePort: 80
